--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "customize-cra": "^1.0.0",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^3.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.3",
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/customize-cra": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^7.32.0",
